[frontend] Fix CSS lines too long

--- a/frontend/src/style/forms.css
+++ b/frontend/src/style/forms.css
@@ -1,7 +1,9 @@
 .form {
-	@apply block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-300 focus:ring focus:ring-blue-200 focus:ring-opacity-50;
+	@apply block w-full rounded-md border-gray-300 shadow-sm 
+	focus:border-blue-300 focus:ring focus:ring-blue-200 focus:ring-opacity-50;
 }
 
 .form-checkbox {
-	@apply rounded border-gray-300 text-indigo-600 shadow-sm focus:border-indigo-300 focus:ring focus:ring-offset-0 focus:ring-indigo-200 focus:ring-opacity-50;
+	@apply rounded border-gray-300 text-indigo-600 shadow-sm 
+	focus:border-indigo-300 focus:ring focus:ring-offset-0 focus:ring-indigo-200 focus:ring-opacity-50;
 }
